@@ -1,3 +1,8 @@
+2010-09-22  Romain Francois <romain@r-enthusiasts.com>
+
+    * R/Module.R: set [[ and [[<- as regular methods too, which restores previous
+    behavior
+
 2010-09-17  Romain Francois <romain@r-enthusiasts.com>
 
     * src/Reference.cpp: new objects are created via a callback to R's new
